add API login and logout
